TeamData is now only for initialization of BedwarsTeam, no longer stored inside BedwarsTeam; refactored BedwarsTeam; added new utility methods in BedwarsTeam; replaced calls to removed methods of BedwarsTeam with the new ones